# MobileManipulate

./: .gitignore  CMakeLists.txt  MmArmBase.cpp  MmArmBase.h  MmAvoidObstacle.cpp  MmAvoidObstacle.h  MmData.cpp  MmData.h  MmMobileRobotBase.cpp  MmMobileRobotBase.h  MmPose.cpp  MmPose.h  MmRFIDAlgorithm.cpp  MmRFIDAlgorithm.h  MmRFIDBase.cpp  MmRFIDBase.h  MmSocketClient.cpp  MmSocketClient.h  MmSocketServer.cpp  MmSocketServer.h  MmSocketSrv.cpp  MmSocketSrv.h  MmVisualServoAlgorithm.cpp  MmVisualServoAlgorithm.h  MmVisualServoBase.cpp  MmVisualServoBase.h  main.cpp
data/: datas.txt  四点50X50.bak  四点50X50.dwg  四点定位.dwg
